--- a/src/configuration/config.ini
+++ b/src/configuration/config.ini
@@ -1,6 +1,10 @@
 [IPAddress]
 IPAddress = 169.254.70.5
+;
 [CommandOffsetCal]
+; added to command, should equal negative bias pot setting
 value = 30
+;
 [ReadingOffsetCal]
+; subtracted from reading, should make zero pressure read zero.
 value = 37
